# hydrogen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: object.yaml
doc/: GAME_OBJECT.md  START.md
ext/cglm/: DOWNLOAD.md  cglm-config.cmake
ext/sdl/: DOWNLOAD.md
inc/: camera.h  constants.h  data.h  game_object.h  recycled_index.h  renderer.h  serialization.h  sprite.h  systems.h  systems_camera.h  systems_sprites.h  world.h
src/: camera.c  game_object.c  main.c  recycled_index.c  renderer.c  serialization.c  systems_camera.c  world.c
test/: runner.c
